# gym-pybullet-drones

./: .gitignore  README.md  pyproject.toml  train.ipynb  train.py  train_yolov8.ipynb
baseline/: difficulties.txt
baseline/PPO-CNN-Depth_circle_bad/: evaluations.npz
baseline/PPO-MULTI-depth-rand-polygon-to-0_0_Action-PID_BAD/: evaluations.npz
baseline/PPO_PID_tar111_arch256_256_128_trunk1.5_dist^4/: evaluations.npz
baseline/big_square_maneuver_at_beginning/: evaluations.npz
baseline/build_up_to_multi_input_policy/: evaluations.npz
baseline/follows_circle_0_25/: evaluations.npz
baseline/follows_triangle/: evaluations.npz
baseline/hover_002_obs_w_rpos/: evaluations.npz
baseline/hover_011_pid_pwlr_256_256_128/: evaluations.npz
baseline/hover_011_rpm_256_256_128_succesful/: evaluations.npz
baseline/hover_011_rpm_pwlr_256_256_128/: evaluations.npz
baseline/hover_pid_128_128_128_64_cr_0_2_vf_coef_1_25/: evaluations.npz
baseline/hover_pid_new_reward/: evaluations.npz
baseline/hover_rpm_002_obs_w_rpos/: evaluations.npz
baseline/hover_rpm_128_128_128_64_cr_0_3_vf_coef_0_75/: evaluations.npz
baseline/hover_rpm_128_128_128_64_cr_0_3_vf_coef_1_00/: evaluations.npz
baseline/hover_vel_128_128_128_64_cr_0_2_vf_coef_1_25/: evaluations.npz
baseline/learns_to_go_under/: evaluations.npz
baseline/lemni_fa_1/: evaluations.npz
baseline/lemni_fa_2/: evaluations.npz
baseline/lemniscate_rpm_400k_0_ab/: evaluations.npz
baseline/lemniscate_rpm_400k_1_ab/: evaluations.npz
baseline/lemniscate_rpm_400k_1_ab_fixed_xyz/: evaluations.npz
baseline/move_011_vel_128_128_128_64_vf_125/: evaluations.npz
baseline/move_vel_128_128_128_64_lstm_8_vf_125/: evaluations.npz
baseline/multi_step/: evaluations.npz
baseline/one_lemni_one_circle/: evaluations.npz
baseline/ppo-rpm-multi-rand-shape/: evaluations.npz
baseline/slow_square/: evaluations.npz
baseline/various_cnn_failed_attempts/: evaluations.npz
dataset/: data.yaml
gym_pybullet_drones/: __init__.py
world_generation/: environment.urdf  generate.ipynb  load_environment.py
(+544 files in other folders)
