[tool.poetry]
name = "gym-pybullet-drones"
version = "2.0.0"
description = "PyBullet Gym environments for single and multi-agent reinforcement learning of quadcopter control"
authors = ["Jacopo Panerati <jacopo.panerati@utoronto.ca>"]
license = "MIT"
readme = "pypi_description.md"
repository = "https://github.com/utiasDSL/gym-pybullet-drones"
packages = [
    { include = "gym_pybullet_drones" }
]

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
numpy = "^1.24"
scipy = "^1.10"
transforms3d = "^0.4.1"
matplotlib = "^3.7"
pytest = "^7.3"
pybullet = "3.2.6"
gymnasium = "^0.28"
stable-baselines3 = "^2.0.0"
sb3-contrib = "^2.2.1"
torchvision = "^0.17.1"
imageio = "^2.34.0"
ultralytics = "^8.1.31"
tensorboard = "^2.16.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
